<resources>
    <string name="app_name">frontg8</string>
    <color name="red">#FF0000</color>
    <color name="blue">#0000FF</color>
    <string name="MainActivity_Menu_Action_aboutMe">About Me</string>
    <string name="MainActivity_Menu_Action_clear_message_history">clear</string>
    <string name="MainActivity_Menu_Action_connection_test">Connection Test</string>
    <string name="MainActivity_Menu_Action_developer">Developer</string>
    <string name="MainActivity_Menu_Action_newContact">New Contact</string>
    <string name="MainActivity_Menu_Action_settings">Settings</string>
    <string name="MainActivity_Menu_Action_about">About</string>
    <string name="MainActivity_Menu_Action_importCerts">Import certificates</string>
    <string name="AboutActivity_ButtonCopyToClipboard">Copy to clipboard</string>
    <string name="AboutActivity_ButtonShowAsQrCode">show as qr code</string>
    <string name="AboutActivity_ButtonShowAsText">show as text</string>
    <string name="ContactActivity_ButtonTextDelete">delete</string>
    <string name="ContactActivity_ButtonTextEdit">edit</string>
    <string name="ContactActivity_ButtonTextSave">save</string>
    <string name="ContactActivity_ButtonTextScanQrCode">scan QR-code</string>
    <string name="dialogPleaseEnterHostname">Please enter server hostname</string>
    <string name="dialogPleaseEnterPort">Please enter port</string>
    <string name="dialogPleaseEnterUsername">Please enter username</string>
    <string name="ContactActivity_EditContact">Edit Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="ContactActivity_HintName">Name</string>
    <string name="ContactActivity_HintSurname">Surname</string>
    <string name="ContactActivity_HintPublicKey">PublicKey</string>
    <string name="messageConnected">Connected</string>
    <string name="messageContactDeleted">Contact deleted</string>
    <string name="messageContactSaved">Contact saved</string>
    <string name="MessageActivity_MessageMessagesDeleted">Messages deleted</string>
    <string name="MainActivity_MessageNoPublicKeyForThisContact">No PublicKey for this contact</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="title_activity_connection_test">Connection test</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_developer">Developer</string>
    <string name="title_activity_message">Messages</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_cert_import">Certificate Import</string>
    <string name="title_activity_fileExplorer">File Chooser</string>
    <string name="MainActivity_TitleContactList">Contact list of</string>
    <string name="MessageActivity_TitleMessageList">"Message List of "</string>
    <string name="ContactActivity_TitleEditContact">Edit Contact %1$s %2$s (%3$s)</string>
    <string name="titleHostname">Hostname</string>
    <string name="AboutActivity_TitleMyPubkey">My public key</string>
    <string name="titleNewContact">New Contact</string>
    <string name="titlePersonalSettings">Personal settings</string>
    <string name="titlePort">Port</string>
    <string name="titleServerSettings">Server settings</string>
    <string name="titleUsername">Username</string>
    <string name="AboutActivity_Frontg8website">frontg8 Website</string>
    <string name="notificationConnected">Connected</string>
    <string name="notificationDisConnected">Lost connection - Press to reconnect</string>
    <string name="notificationButtonConnect">Connect</string>
    <string name="titleCurrentDir">Current Dir</string>
    <string name="titleItem">item</string>
    <string name="titleItems">items</string>
    <string name="titleParentDirectory">Parent Directory</string>
    <string name="CertImportActivity_ButtonImportCaCert">import CA Cert</string>
    <string name="CertImportActivity_ButtonImportKeypair">import Keypair</string>
    <string name="CertImportActivity_ButtonExportKeypair">export Keypair</string>
    <string name="CertImportActivity_ImportCertFrom">Import CA Cert from: %1$s</string>
    <string name="CertImportActivity_ImportKeyFrom">Import Keypair from: %1$s</string>
    <string name="CertImportActivity_Error">Something went wrong…</string>
    <string name="CertImportActivity_ExportKeyTo">Export Keypair to: %1$s</string>
    <string name="AboutActivity_Version">frontg8 Version %1$s (%2$s)\n\n</string>
    <string name="AboutActivity_TextAbout">Frontg8 ist ein Chatsystem, bestehend aus Server und Client. Frontg8 fokussiert sich auf die anonyme Kommunikation zwischen zwei Anwendern. Der Kommunikationsweg muss dabei nicht sicher sein und kann deshalb über das Internet erfolgen. Für die Einhaltung der Privatsphäre ist es erforderlich, dass jede Komponente vollständig unter eigener Kontrolle steht. Die Benutzer des Systems sind jeweils im Besitz eines Public-Private-Keypairs, welches sie zur gegenseitigen Identifikation und zum Erarbeiten eines gemeinsamen Schlüssels verwenden. Der Schlüsselaustausch wird nicht über den Server durchgeführt, damit der Server selbst so wenig wie möglich über die Teilnehmer erfährt.
   Die Anwender müssen ihre Schlüssel also über einen anderen Weg austauschen.</string>
    <string name="AboutActivity_Toast_NoWebBrowser">No application can handle this request. Please install a web browser</string>
    <string name="MessageActivity_SendButton">send</string>
    <string name="ContactActivity_Contact">Contact</string>
    <string name="MainActivity_Menu_Search">Search</string>
    <string name="Images_frontg8Logo">frontg8 logo</string>

</resources>
