<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/titlePersonalSettings">
        <EditTextPreference
            android:key="edittext_preference_username"
            android:title="@string/titleUsername"
            android:summary="Your username"
            android:dialogTitle="@string/dialogPleaseEnterUsername"
            android:defaultValue="John" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/titleServerSettings">
        <EditTextPreference
            android:key="edittext_preference_hostname"
            android:title="@string/titleHostname"
            android:summary="Hostname to connect to"
            android:dialogTitle="@string/dialogPleaseEnterHostname"
            android:defaultValue="server.frontg8.ch" />
        <EditTextPreference
            android:key="edittext_preference_port"
            android:title="@string/titlePort"
            android:summary="Port to connect to"
            android:dialogTitle="@string/dialogPleaseEnterPort"
            android:defaultValue="40001"
            android:numeric="integer"
            android:maxLength="5"/>
    </PreferenceCategory>
</PreferenceScreen>