<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="ch.frontg8.view.ContactActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContactActivity_EditContact"/>

    <EditText
        android:id="@+id/editPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editPersonSurname"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ContactActivity_HintName"
        android:inputType="textPersonName"
        android:text=""/>

    <EditText
        android:id="@+id/editPersonSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editPublickey"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPersonName"
        android:ems="10"
        android:hint="@string/ContactActivity_HintSurname"
        android:inputType="textPersonName"
        android:text=""/>

    <EditText
        android:id="@+id/editPublickey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPersonSurname"
        android:layout_marginTop="6dp"
        android:ems="7"
        android:hint="@string/ContactActivity_HintPublicKey"
        android:text=""
        android:textSize="12sp"/>

    <Button
        android:id="@+id/buttonLoadKey"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPublickey"
        android:text="@string/ContactActivity_ButtonTextScanQrCode"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonLoadKey"
        android:layout_marginTop="10dp"
        android:text="@string/ContactActivity_ButtonTextDelete"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonDelete"
        android:layout_toEndOf="@+id/buttonDelete"
        android:text="@string/ContactActivity_ButtonTextSave"/>


</RelativeLayout>
